# codex-rpc

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  install.ps1  package-lock.json  package.json  start.bat  stop.bat  tsconfig.json
.github/workflows/: ci.yml  release-macos.yml
assets/: README.md  icon.icns
scripts/: build-exe.js  build-tauri-macos.js  build-tauri.js  export-tauri-binary.js  export-tauri-exe.js  prepare-tauri-sidecar.js  run-daemon.ps1
src/: config.ts  index.ts  status.ts  tray.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: daemon.rs  main.rs
src/detector/: classifier.ts  codex-config.ts  codex-session.ts  codex-usage.ts  index.ts  process-scanner.ts  state.ts
src/rpc/: client.ts  presence-builder.ts
src/utils/: debounce.ts  logger.ts  single-instance.ts  status-file.ts
tauri-ui/: index.html  main.js  styles.css
test/: classifier.test.ts  codex-config.test.ts  codex-session.test.ts  codex-usage.test.ts  config.test.ts  debounce.test.ts  manual-rpc.ts  presence-builder.test.ts  sanitize.test.ts  single-instance.test.ts  state.test.ts
test/fixtures/: wmi-ambiguous.json  wmi-app-localappdata.json  wmi-app-programfiles.json  wmi-both.json  wmi-bun-global.json  wmi-npm-global.json  wmi-pnpm.json
