[package]
name = "codex_rich_presence_tray"
version = "0.2.0"
description = "Local tray UI for Codex Rich Presence"
authors = ["StealthyLabs"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
