[package]
name = "codex_rich_presence_tray"
version = "0.3.0"
description = "Codex RPC"
authors = ["StealthyLabs"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
